<resources>
    <string name="app_name">Push The Box!</string>
    <string name="helloWorld">Hello World !</string>

    <string name="activity_scan_button">Scan again</string>
    <string name="activity_scan_paired_text">Paired Devices :</string>

    <string name="bluetooth_scanning">Scanning…</string>
    <string name="bluetooth_scan_finished">Scan finished.</string>
    <string name="bluetooth_pairing">Pairing…</string>
    <string name="bluetooth_paired">Device Paired.</string>
    <string name="bluetooth_unpaired">Device Unpaired.</string>
    <string name="bluetooth_connected">Device Connected.</string>
    <string name="bluetooth_connecting">Connecting…</string>
    <string name="bluetooth_disconnected">Device Disconnected.</string>
    <string name="bluetooth_connect_in_3sec">Could not connect. New attempt in 3sec…</string>
    <string name="bluetooth_turning_on">Turning bluetooth on…</string>

    <string name="forward_button">↑</string>
    <string name="back_button">↓</string>
    <string name="left_button">←</string>
    <string name="right_button">→</string>
    <string name="level1_button">1</string>
    <string name="level2_button">2</string>
    <string name="level3_button">3</string>
    <string name="level4_button">4</string>
    <string name="level5_button">5</string>
    <string name="level6_button">6</string>
    <string name="textView">Select Your Level:</string>
</resources>
