<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="me.aflak.libraries.ui.scan.view.ScanActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_chat_status" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/level1_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/main_button_style"
            android:text="@string/level1_button"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/level2_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/main_button_style"
            android:text="@string/level2_button"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/level3_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/main_button_style"
            android:text="@string/level3_button"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/level4_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/main_button_style"
            android:text="@string/level4_button"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/level5_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/main_button_style"
            android:text="@string/level5_button"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/level6_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/main_button_style"
            android:text="@string/level6_button"
            android:textColor="@android:color/background_light" />
    </LinearLayout>

    <Button
        android:id="@+id/right_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/main_button_style"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/right_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#fff"
        android:textSize="36sp"
        app:layout_constraintStart_toEndOf="@+id/forward_button"
        app:layout_constraintTop_toBottomOf="@+id/forward_button" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="51dp"
        android:background="@drawable/main_button_style"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/back_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#fff"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="@+id/forward_button"
        app:layout_constraintTop_toBottomOf="@+id/left_button" />

    <Button
        android:id="@+id/left_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/main_button_style"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/left_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#fff"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/forward_button"
        app:layout_constraintTop_toBottomOf="@+id/forward_button" />

    <Button
        android:id="@+id/forward_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/main_button_style"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/forward_button"
        android:textColor="#fff"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.29000002" />

    <TextView
        android:id="@+id/activity_chat_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
